make Role enum